welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:5: error: 'while' expected but 'if' found.
  if (FoundBaggles<3) {droite();FoundBaggles=0}
  ^Poucet:9: error: '(' expected but ';' found.
while (crossing()==false)}
^Poucet:9: error: illegal start of simple expression
while (crossing()==false)}
                         ^